# a555cribe

./: Dockerfile  README.md  deployment.yaml  pyproject.toml  skaffold.yaml
.github/: dependabot.yml
.github/workflows/: ci.yaml
src/a555cribe/: __init__.py  api.py
