[project]
name = "a555cribe"
version = "0.1.0"
description = "A 555 audio transcription CLI and API"
readme = "README.md"
authors = [
    { name = "acidghost", email = "1787979+acidghost@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "faster-whisper>=1.2.0",
    "python-multipart>=0.0.20",
    "rich>=14.1.0",
    "typer>=0.16.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]

[project.scripts]
a555cribe = "a555cribe:cli"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = [
    "E",
    "I",
    "S",
    "UP",
    "W",
]
